# model-health

./: CLAUDE.md  Cargo.toml  LICENSE  README.md
plans/: activity-fetching.md  stress-decomposition.md
scripts/: pre-commit  setup-hooks.sh
src/: config.rs  data.rs  decompose.rs  error.rs  features.rs  fetch.rs  fitness.rs  injury_risk.rs  main.rs  model.rs  races.rs  readiness.rs  recap.rs  routes.rs  sync.rs  validation.rs
