[package]
name = "model-health"
version = "0.1.0"
edition = "2024"

[dependencies]
# Garmin API client
garmin-connect = { path = "../garmin-connect" }

# CLI
clap = { version = "4", features = ["derive"] }

# Async runtime
tokio = { version = "1", features = ["full"] }

# Data processing
polars = { version = "0.46", features = ["lazy", "parquet", "temporal", "rolling_window", "trigonometry"] }

# Classical ML
smartcore = { version = "0.4", features = ["serde"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"

# Error handling
thiserror = "2"
anyhow = "1"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Date/time
chrono = { version = "0.4", features = ["serde"] }

# HTTP (blocking, for reverse geocoding)
ureq = "3"

# Config/paths
dirs = "6"

[dev-dependencies]
tempfile = "3.27.0"
